--- a/package.json
+++ b/package.json
@@ -1,12 +1,12 @@
 {
   "name": "time-to",
-  "version": "1.2.3",
+  "version": "1.3.0",
   "description": "Countdown timer and digital clock",
   "main": "jquery.time-to.js",
   "scripts": {
-    "start": "gulp",
-    "lint": "gulp lint",
-    "build": "gulp build",
+    "start": "npm run lint && npm run build",
+    "lint": "npx eslint jquery.time-to.js",
+    "build": "npx uglifyjs jquery.time-to.js -o jquery.time-to.min.js --comments",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -28,13 +28,11 @@
   "devDependencies": {
     "eslint-config-airbnb-base": "^9.0.0",
     "eslint-plugin-import": "^2.0.1",
-    "gulp": "^3.9.0",
-    "gulp-eslint": "^3.0.1",
-    "gulp-rename": "^1.2.2",
-    "gulp-uglify": "^1.5.1"
+    "eslint": "^5.16.0",
+    "uglify-js": "^3.5.12"
   },
   "peerDependencies": {
-    "jquery": "^3.3.1"
+    "jquery": "^3.4.1"
   },
   "eslintConfig": {
     "env": {
